[tool.poetry]
name = "pie-lock"
version = "0.1.1"
description = "A library for python distributed lock"
authors = ["TuanDC <tuandao864@gmail.com>"]
packages = [
    { include = "pylock" },
    { include = "pylock/**/*.py" },
]

[tool.poetry.dependencies]
python = "^3.6.2"
inflection = "^0.5.1"
arrow = "^1.2.2"
redis = "^4.4.0"
async-timeout = "^4.0.2"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
pytest = "^6.2.5"
pytest-cov = "^2.12.1"
pytest-sugar = "^0.9.4"
tox = "^3.24.4"
tox-pyenv = "^1.1.0"
pytest-watch = "^4.2.0"
inflection = "^0.5.1"
arrow = "^1.2.2"
redis = "^4.4.0"
async-timeout = "^4.0.2"
poetry = "^1.3.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
